<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.PostAnAdActivity">

    <item
        android:id="@+id/show_map_item"
        android:title="@string/Map"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_map"/>
    <item
        android:id="@+id/profile_item"
        android:title="@string/Profile"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/baseline_account_circle_white_24"/>
    <item
        android:id="@+id/message_item"
        android:title="@string/Message"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/baseline_message_white_24"/>
    <item
        android:id="@+id/logout_item"
        android:title="@string/logout"
        android:orderInCategory="100"
        app:showAsAction="never" />


</menu>