<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PostAnAdActivity">


    <ImageView
        android:id="@+id/PostAnAd_imgAd"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_launcher_background" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="368dp"
        android:layout_height="380dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PostAnAd_imgAd">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp">

            <TextView
                android:id="@+id/PostAnAd_lblMark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Mark" />

            <EditText
                android:id="@+id/PostAnAd_etMark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/PostAnAd_lblModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Model" />

            <EditText
                android:id="@+id/PostAnAd_etModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/PostAnAd_lblYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Year" />

            <EditText
                android:id="@+id/PostAnAd_etYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/PostAnAd_lblMileage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Mileage" />

            <EditText
                android:id="@+id/PostAnAd_etMileage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/PostAnAd_lblFuel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Fuel" />

            <EditText
                android:id="@+id/PostAnAd_etFuel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/PostAnAd_lblDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Description" />

            <EditText
                android:id="@+id/PostAnAd_etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <Button
                        android:id="@+id/PostAnAd_btnPostAdOnCurrentLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/PostAdOnCurrentLocation" />

                </TableRow>


            </TableLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>