<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileView">

    <ImageView
        android:id="@+id/profileView_imgvProfileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="74dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileView_imgvProfileImage">

        <TextView
            android:id="@+id/profileView_lblName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/name"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="163dp" />

        <TextView
            android:id="@+id/profileView_txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text=""
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="190dp" />

        <TextView
            android:id="@+id/profileView_lblSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/surname"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="216dp" />

        <TextView
            android:id="@+id/profileView_txtSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text=""
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="246dp" />

        <TextView
            android:id="@+id/profileView_lblUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/username"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="274dp" />

        <TextView
            android:id="@+id/profileView_txtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text=""
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="304dp" />

        <TextView
            android:id="@+id/profileView_lblEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/email"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="339dp" />

        <TextView
            android:id="@+id/profileView_txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text=""
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="368dp" />

        <TextView
            android:id="@+id/profileView_lblContactNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/number"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="397dp" />

        <TextView
            android:id="@+id/profileView_txtContactNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text=""
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="426dp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>