<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BluetoothActivity">


    <ListView
        android:id="@+id/bluetooth_lv_discoverDevices"
        android:layout_width="wrap_content"
        android:layout_height="326dp"
        android:layout_marginTop="19dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bluetooth_btn_send" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        app:layout_constraintBottom_toTopOf="@+id/bluetooth_et_textToSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bluetooth_btn_onoff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onff"
                tools:layout_editor_absoluteX="54dp"
                tools:layout_editor_absoluteY="16dp" />

            <Button
                android:id="@+id/bluetooth_btn_enable_discoverable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_discoverable"
                tools:layout_editor_absoluteX="157dp"
                tools:layout_editor_absoluteY="16dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bluetooth_btn_discover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discover"
                tools:layout_editor_absoluteX="228dp"
                tools:layout_editor_absoluteY="72dp" />

            <Button
                android:id="@+id/bluetooth_btn_startConnection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_connection"
                tools:layout_editor_absoluteX="54dp"
                tools:layout_editor_absoluteY="72dp" />
        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="21dp"
        android:text="Enter text"
        app:layout_constraintBottom_toTopOf="@+id/bluetooth_lv_discoverDevices"
        app:layout_constraintEnd_toStartOf="@+id/bluetooth_et_textToSend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/bluetooth_et_textToSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/bluetooth_lv_discoverDevices"
        app:layout_constraintEnd_toStartOf="@+id/bluetooth_btn_send"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Button
        android:id="@+id/bluetooth_btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="9dp"
        android:text="Send"
        app:layout_constraintBottom_toTopOf="@+id/bluetooth_lv_discoverDevices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bluetooth_et_textToSend"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</android.support.constraint.ConstraintLayout>